terraform/staging-namespace.tf
# resource "kubernetes_namespace" "staging" {
#   metadata {
#     name = "kijani-staging"
#   }
# }
